Fixed grid overflow display

--- a/src/components/DrawingGrid.scss
+++ b/src/components/DrawingGrid.scss
@@ -2,6 +2,7 @@
 	background-color: var(--bg-color);
 	display: flex;
 	flex-direction: column;
+	overflow-x: auto;
 
 	&__row {
 		display: flex;
