--- a/src/components/PatternManager.scss
+++ b/src/components/PatternManager.scss
@@ -5,7 +5,6 @@
 
 	&__col {
 		box-sizing: border-box;
-		overflow-x: auto;
 		padding: 15px;
 
 		&:first-child {
